--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gatsby-image": "^2.4.16",
     "gatsby-plugin-manifest": "^2.4.24",
     "gatsby-plugin-offline": "^3.2.24",
+    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-sharp": "^2.6.28",
     "gatsby-plugin-styled-components": "^3.3.10",
@@ -16,7 +17,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "styled-icons": "^10.18.0"
   },
   "devDependencies": {
     "prettier": "2.1.0"
