--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "mars-collective",
   "private": true,
   "dependencies": {
+    "@styled-icons/boxicons-logos": "^10.18.0",
+    "@styled-icons/boxicons-regular": "^10.18.0",
+    "@styled-icons/remix-line": "^10.18.0",
     "babel-plugin-styled-components": "^1.11.1",
     "gatsby": "^2.24.50",
     "gatsby-image": "^2.4.16",
@@ -18,8 +21,7 @@
     "react-dom": "^16.12.0",
     "react-headroom": "^3.0.0",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.1.1",
-    "styled-icons": "^10.18.0"
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "prettier": "2.1.0"
