--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^16.12.0",
     "react-headroom": "^3.0.0",
     "react-helmet": "^6.1.0",
+    "react-i18next": "^11.7.2",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
