--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-source-filesystem": "^2.3.25",
     "gatsby-transformer-sharp": "^2.5.13",
     "i18next": "^19.7.0",
+    "i18next-browser-languagedetector": "^6.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
