--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-headroom": "^3.0.0",
     "react-helmet": "^6.1.0",
     "react-i18next": "^11.7.2",
+    "react-reveal": "^1.2.2",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
