--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "gatsby-plugin-sharp": "^2.6.28",
     "gatsby-plugin-styled-components": "^3.3.10",
     "gatsby-plugin-webfonts": "^1.1.3",
+    "gatsby-remark-images": "^3.3.28",
     "gatsby-source-filesystem": "^2.3.25",
+    "gatsby-transformer-remark": "^2.8.32",
     "gatsby-transformer-sharp": "^2.5.13",
     "i18next": "^19.7.0",
     "i18next-browser-languagedetector": "^6.0.1",
