--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
     "@styled-icons/boxicons-logos": "^10.18.0",
     "@styled-icons/boxicons-regular": "^10.18.0",
     "@styled-icons/remix-line": "^10.18.0",
-    "add": "^2.0.6",
     "babel-plugin-styled-components": "^1.11.1",
     "gatsby": "^2.24.50",
     "gatsby-image": "^2.4.16",
     "gatsby-plugin-anchor-links": "^1.1.1",
     "gatsby-plugin-manifest": "^2.4.24",
+    "gatsby-plugin-netlify-cms": "^4.3.12",
     "gatsby-plugin-offline": "^3.2.24",
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-react-i18next": "^0.0.27",
@@ -18,11 +18,13 @@
     "gatsby-plugin-sharp": "^2.6.28",
     "gatsby-plugin-styled-components": "^3.3.10",
     "gatsby-plugin-webfonts": "^1.1.3",
+    "gatsby-remark-copy-linked-files": "^2.3.13",
     "gatsby-remark-images": "^3.3.28",
     "gatsby-source-filesystem": "^2.3.25",
     "gatsby-transformer-remark": "^2.8.32",
     "gatsby-transformer-sharp": "^2.5.13",
     "i18next": "^19.7.0",
+    "netlify-cms-app": "^2.12.20",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
