--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-helmet": "^6.1.0",
     "react-i18next": "^11.7.2",
     "react-reveal": "^1.2.2",
+    "react-tabs": "^3.1.1",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
