--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-transformer-remark": "^2.8.32",
     "gatsby-transformer-sharp": "^2.5.13",
     "i18next": "^19.7.0",
+    "mailgun-js": "^0.22.0",
     "netlify-cms-app": "^2.12.20",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -46,6 +47,6 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "deploy": "gatsby clean && gatsby build && netlify deploy -p"
+    "deploy": "yarn build && netlify deploy -p"
   }
 }
