--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-react-i18next": "^0.0.27",
     "gatsby-plugin-react-svg": "^3.0.0",
+    "gatsby-plugin-scroll-reveal": "^0.0.7",
     "gatsby-plugin-sharp": "^2.6.28",
     "gatsby-plugin-styled-components": "^3.3.10",
     "gatsby-plugin-webfonts": "^1.1.3",
@@ -32,7 +33,6 @@
     "react-headroom": "^3.0.0",
     "react-helmet": "^6.1.0",
     "react-i18next": "^11.7.2",
-    "react-reveal": "^1.2.2",
     "react-tabs": "^3.1.1",
     "styled-components": "^5.1.1"
   },
