--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
           node-version: 14.x
 
       - name: Install dependencies
-        run: yarn install && npm i -g gatsby-cli
+        run: yarn install && yarn global add gatsby-cli
 
       - name: Build
         run: gatsby build
