--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby": "^2.24.50",
     "gatsby-image": "^2.4.17",
     "gatsby-plugin-anchor-links": "^1.1.1",
+    "gatsby-plugin-google-tagmanager": "^2.3.11",
     "gatsby-plugin-manifest": "^2.4.28",
     "gatsby-plugin-netlify-cms": "^4.3.12",
     "gatsby-plugin-offline": "^3.2.27",
