--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-remark-images": "^3.3.29",
     "gatsby-source-filesystem": "^2.3.28",
     "gatsby-transformer-remark": "^2.8.34",
+    "gatsby-transformer-remark-frontmatter": "^0.1.0",
     "gatsby-transformer-sharp": "^2.5.14",
     "i18next": "^19.7.0",
     "mailgun-js": "^0.22.0",
