--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-plugin-manifest": "^2.4.28",
     "gatsby-plugin-minify-html": "^1.0.3",
     "gatsby-plugin-netlify-cms": "^4.3.13",
+    "gatsby-plugin-no-sourcemaps": "^2.2.0",
     "gatsby-plugin-offline": "^3.2.27",
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-react-i18next": "^0.0.27",
