--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "i18next": "^19.7.0",
     "mailgun-js": "^0.22.0",
     "netlify-cms-app": "^2.12.20",
+    "netlify-plugin-gatsby-cache": "^0.3.2",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
