--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby-image": "^2.4.17",
     "gatsby-plugin-anchor-links": "^1.1.1",
     "gatsby-plugin-google-tagmanager": "^2.3.11",
+    "gatsby-plugin-intl": "^0.3.3",
     "gatsby-plugin-manifest": "^2.4.28",
     "gatsby-plugin-minify-html": "^1.0.3",
     "gatsby-plugin-netlify-cms": "^4.3.13",
